@@ -1,3 +1,10 @@
+2013-02-01  Andreas Kupries  <aku@hephaistos>
+
+	* json_write.tcl: While we can quote / (solidus) via \/ as per the
+	* json_write.man: JSON syntax there is no reason why we should.
+	* json_write.test: Bumped version to 1.0.2.
+	* pkgIndex.tcl:
+
 2011-12-13  Andreas Kupries  <andreas_kupries@users.sourceforge.net>
 
 	*
